# eldenswing

./: .gitignore  4th-apirl-splits.csv  Cargo.toml  README.md  history.csv  res.txt  run.sh  screengrab_log.txt
.github/workflows/: rust.yml
.tmp.driveupload/: 4633  4637  4641  4643  4647  4649  4657  4661  4665  4667  4669  4673  4677  4679  4683  4687  4689  4693  4697  4699  4705  4709  4713  4717  4719  4723  4727  4731  4737  4741  4745  4749  4753  4757  4763  4767  4771  4775  4779  4781  (+175 more)
_depricated/: akaze_detector.rs  notes.rs  os_reader.rs  ps4.rs
assets/: history (1).gsheet  history.csv  history.gsheet
assets/.tmp.driveupload/: 8642
assets/backup/: history.csv  history2.csv  history3.csv
ocr/: Cargo.toml  frames.sh  notes.rs
ocr/pyocr/: main.py
ocr/src/: main.rs
python/: main.py
src/: controller.rs  cv_utils.rs  data_utils.rs  ingame.rs  main.rs  mohgwyn.rs  notes.rs  os_reader.rs  ps4.rs  ui.rs
