[package]
name = "eldenr"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "*"
chrono = "*"
csv = "1.1.6"
dssim = "3.2.0"
enigo = "0.0.14"
image = "0.23.0"
imageproc = "0.22.0"
imgref = "1.9.1"
itertools = "0.10.3"
lodepng = "3.6.1"
open = "2.0.2"
palette = "0.6.0"
serde = { version = "1.*", features = ["derive"] }
tempfile = "3.3.0"
