[package]
name = "eldenr"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "*"
chrono = "*"
csv = "1.1.6"
enigo = "0.0.14"
image = "0.23.*"
imageproc = "0.22.0"
prettytable-rs = "^0.8"
scrap = "*"
winput = "*"
serde = { version = "1.*", features = ["derive"] }
sysinfo = "0.23.9"
dssim = "3.2.0"
