[package]
name = "eldenr"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "*"
chrono = "*"
colored = "2"
csv = "1.1.6"
dssim = "3.2.0"
enigo = "0.0.14"
file-matcher = "0.7.0"
image = "0.23.*"
imageproc = "0.22.0"
prettytable-rs = "^0.8"
scrap = "*"
serde = { version = "1.*", features = ["derive"] }
sysinfo = "0.23.9"
walkdir = "2.3.2"
winput = "*"
